tests/snapshot/error/source_locations/expression/update/error_const.js
function test() {
  const x = 1;
  x++;
}

test();