tests/snapshot/error/source_locations/expression/update/error_const.exp
TypeError: can't assign constant `x`
  ┌ source_locations/expression/update/error_const.js:3:3
  |
3 |   x++;
  |   ^
Stack trace:
  at test (source_locations/expression/update/error_const.js:3:3)
  at <global> (source_locations/expression/update/error_const.js:6:1)